--- a/client/src/components/Navigation/Toolbar/Toolbar.scss
+++ b/client/src/components/Navigation/Toolbar/Toolbar.scss
@@ -1,17 +1,15 @@
 $box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
 
 .Toolbar {
+    background-color: white;
     height: 56px;
-    width: 100%;
+    width: 100vw;
     position: fixed;
-    top: 0;
-    left: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
     box-sizing: border-box;
-    z-index: 100;
     box-shadow: $box-shadow;
 }
 
@@ -22,7 +20,7 @@ $box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
 .Logo {
     display: flex;
     height: 100%;
-    border: 1px solid black;
+    //border: 1px solid black;
 }
 
 .Logo p {
