--- a/client/src/hoc/Layout/Layout.css
+++ b/client/src/hoc/Layout/Layout.css
@@ -1,12 +1,29 @@
-* {
-    padding: 0;
-    margin: 0;
+*, *:before, *:after
+{
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
+html, body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+
 #root {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
+    display: flex; 
     flex-direction: column;
+    min-height: 100vh;
+}
+
+.Content {
+    flex: 1;
+    display: flex;
     justify-content: center;
+    flex-direction: column;
+    margin-top: 66px;
 }
