--- a/client/src/components/UI/Backdrop/Backdrop.css
+++ b/client/src/components/UI/Backdrop/Backdrop.css
@@ -7,3 +7,9 @@
     top: 0;
     background-color: rgba(0,0,0, 0.5)
 }
+
+@media (min-width: 679px) {
+    .Backdrop {
+        display: none;
+    }
+}
