--- a/client/src/components/Navigation/Toolbar/Toolbar.scss
+++ b/client/src/components/Navigation/Toolbar/Toolbar.scss
@@ -11,6 +11,7 @@ $box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
     padding: 0 20px;
     box-sizing: border-box;
     box-shadow: $box-shadow;
+    z-index: 100;
 }
 
 .Toolbar nav {
