--- a/client/src/routes/Auth/Auth.scss
+++ b/client/src/routes/Auth/Auth.scss
@@ -2,8 +2,10 @@ $blue_theme: #70a1ff;
 $box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
 
 .root-container {
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
@@ -59,7 +61,7 @@ $box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
     padding: 5px;
     margin-bottom: 17px;
     font-family: Ozxgen, sans-serif;
-    font-size: 22px;
+    font-size: 25px;
     border-bottom: 2px solid $blue_theme;
 }
 
