update profile page, remove eslintrc.json  in client folder

--- a/client/src/routes/Profile/Profile.css
+++ b/client/src/routes/Profile/Profile.css
@@ -39,11 +39,7 @@
     font-weight: 600;
 }
 
-textarea {
+.input-text {
     overflow: auto;
     resize: none;
-}
-
-.Content {
-    background-color: lightgray
 }
