--- a/client/src/routes/Profile/Profile.css
+++ b/client/src/routes/Profile/Profile.css
@@ -1,45 +1,4 @@
-.bloc {
-    display: flex;
-    flex-direction: column;
-    
-    margin:auto;
-    margin-top: 20px;
-    border: 2px grey solid;
-    border-radius: 20px;
-    background-color: white;
-
-}
-
-.box-title {
-    background-color: rgb(202, 8, 19);
-    border-top-left-radius: 19px;
-    border-top-right-radius: 19px;
-}
-
-.box-title h3{
-    margin-left: 10px;
-    color: white;
-
-}
-
-.box-content {
-    width: 80%;
-    margin: auto;
-    margin-bottom: 15px;
-}
-
-.btn-radio {
-    border: 1px solid grey;
-    border-radius: 6px;
-}
-
-.label-form {
-    font-family: Oxygen, sans-serif;
-    font-size: 15px;
-    font-weight: 600;
-}
-
-.input-text {
-    overflow: auto;
+.textplain {
     resize: none;
+    overflow: auto;
 }
