--- a/client/src/components/Navigation/NavIcons/NavIcons.scss
+++ b/client/src/components/Navigation/NavIcons/NavIcons.scss
@@ -4,7 +4,7 @@
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    //border: 1px solid black;
+    border: 1px solid black;
     width: 100%;
 }
 
