--- a/client/src/components/UI/Input/Input.scss
+++ b/client/src/components/UI/Input/Input.scss
@@ -1,4 +1,4 @@
-$blue_theme: #70a1ff;
+$blue_theme: #40a4c8;
 
 .Input {
     display: flex;
@@ -31,7 +31,7 @@ $blue_theme: #70a1ff;
 }
 
 .InputElement:focus {
-    border: 2px solid #6565e7;
+    border: 2px solid #40a4c8;
     box-shadow: 0px 0px 20px rgba(15, 15, 15, 0.2);
 }
 
@@ -42,11 +42,11 @@ $blue_theme: #70a1ff;
 }
 
 .Invalid {
-    border: 1px solid red;
+    border: 1px solid tomato;
     background-color: #FDA49A;
 }
 
 .danger-error {
-    color: #e74c3c;
-    font-size: 16px;
+    color: tomato;
+    font-size: 14px;
 }
