--- a/client/src/routes/People/People.css
+++ b/client/src/routes/People/People.css
@@ -1,10 +1,5 @@
 .People {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.slick-dots {
-    bottom: 0;
+    flex-flow: row wrap;
+    justify-content: space-around;
 }
