--- a/client/src/routes/Profile/Profile.css
+++ b/client/src/routes/Profile/Profile.css
@@ -1,15 +1,16 @@
-textarea {
-    resize: none;
-    overflow: auto;
-}
-
-
-
 .bloc {
-    width: 80%;
+    width: 100%;
     padding: 20px;
+    margin: auto;
     margin-top: 20px;
-    margin:auto;
     box-shadow: 0px 7px 5px 7px lightgrey;
     border-radius: 7px;
+}
+
+.photo {
+    width: 100%;
+}
+
+.profile {
+    border:2px solid red;
 }
