--- a/client/src/components/UserCard/UserCard.css
+++ b/client/src/components/UserCard/UserCard.css
@@ -1,7 +1,3 @@
-.UserCard {
-    margin-top: 10px;
-}
-
 .Like {
     background: 0;
     color: red;
@@ -12,16 +8,24 @@
     bottom: 0;
 }
 
-.CardHeader {
-    border-bottom: 0;
-    margin: 7px;
-    box-shadow: 0px 0px 3px 0px rgba(59, 57, 57, 0.349);
-    border-radius: 15px;
+.UserCard {
+    height: auto;
+}
+
+.UserCard .header {
+    padding: 0;
+    width: 100%;
+    border-bottom: 1px solid rgba(59, 57, 57, 0.349);
+}
+
+.UserCard .content {
+    padding: 0px;
 }
 
 .Status {
-    font-size: 0.7em;
-    margin-left: 10px;
+    text-align: right;
+    padding-left: 0;
+    font-size: 0.6em;
     color: rgba(161, 83, 83, 0.603);
 }
 
@@ -31,7 +35,7 @@
 
 .Information {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     font-size: 0.9em;
     font-style: italic;
     padding-bottom: 5px;
