--- a/client/src/routes/Profile/Profile.css
+++ b/client/src/routes/Profile/Profile.css
@@ -14,3 +14,11 @@
 .profile {
     border:2px solid red;
 }
+
+.radio-group h4 {
+    text-align: left;
+}
+
+.left-title {
+    text-align: left;
+}
