--- a/client/src/components/UI/ChatWidget/Window.css
+++ b/client/src/components/UI/ChatWidget/Window.css
@@ -25,6 +25,11 @@
   .ChatBody {
     overflow-y: auto;
     background-color: white;
+    border: 2px solid #4e8cff;
+    border-top: 0;
+    box-shadow: 0 1px 4px rgba(0,0,0,.2);
+    border-bottom-left-radius: 9px;
+    border-bottom-right-radius: 9px;
     flex: 1;
   }
   
