--- a/client/src/components/UI/Modal/Modal.css
+++ b/client/src/components/UI/Modal/Modal.css
@@ -2,6 +2,7 @@
     position: fixed;
     z-index: 100;
     width: 85%;
+    height:85%;
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -33,7 +34,7 @@
     align-self: center;
     padding: 10px;
   }
-  
+
   .ModalHeaderTittle {
     font-size: 1.2em;
     align-self: center;
@@ -42,7 +43,7 @@
     user-select: none;
     border-radius: 5px;
   }
-  
+
   .ModalHeaderCloseButton {
     width: 40px;
     align-self: center;
@@ -52,11 +53,11 @@
     cursor: pointer;
     border-radius: 5px;
   }
-  
+
   .ModalHeaderCloseButton:hover {
     background: #4882ed;
   }
-  
+
   .ModalHeaderCloseButton img {
     width: 100%;
     height: 100%;
