--- a/client/src/components/UI/Spinner/Spinner.css
+++ b/client/src/components/UI/Spinner/Spinner.css
@@ -57,3 +57,25 @@
     height: 5em;
   }
 }
+
+/** MINI LOADER **/
+.MiniLoader {
+  border: 4px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 4px solid #3498db;
+  width: 16px;
+  height: 16px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+/** MINI LOADER **/
