Firefox socket warnings test

--- a/client/src/components/Profile/Profile.scss
+++ b/client/src/components/Profile/Profile.scss
@@ -53,6 +53,11 @@ $box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
     width: 95%;
 }
 
+.TagsList {
+    // display: flex;
+    // overflow-y: auto;
+}
+
 .Report {
     font-size: 0.8em;
     display: flex;
