--- a/client/src/routes/Notifications/Notifications.css
+++ b/client/src/routes/Notifications/Notifications.css
@@ -10,7 +10,9 @@
 }
 
 .NotificationsListHeader {
-    margin-bottom: 5px;
+    margin: 5px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .NotificationsListBody {
