password restore component

--- a/client/src/routes/Auth/Auth.scss
+++ b/client/src/routes/Auth/Auth.scss
@@ -76,3 +76,8 @@ $box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
     flex-direction: column;
     justify-content: center;
 }
+
+.RestoreLink {
+    margin-top: 10px;
+    text-align: center;
+}
