update of user information on redux

--- a/client/src/components/UI/Input/Input.scss
+++ b/client/src/components/UI/Input/Input.scss
@@ -37,6 +37,10 @@ $blue_theme: #40a4c8;
     background: rgba(15, 15, 15, 0.01);
 }
 
+.DateElement {
+    
+}
+
 .InputElement:hover {
     border: 2px solid $blue_theme;
 }
