--- a/client/src/routes/Profile/Profile.css
+++ b/client/src/routes/Profile/Profile.css
@@ -13,13 +13,24 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 10px;
+    border:1px solid black;
 }
-
-
+  
+.ProfileBox {
+    display: flex;
+    justify-content: center;
+    border: 1px solid black;
+    width: 50em;
+}
 
 
 .ProfileMatch {
     /* border: 1px solid black; */
     display: flex;
     justify-content: space-around;
+}
+
+.tags {
+    border: 1px solid black;
+    padding: 10px;
 }
