--- a/client/src/routes/People/People.css
+++ b/client/src/routes/People/People.css
@@ -21,3 +21,17 @@
     width: 100%;
     margin-bottom: 10px;
 }
+
+.FilterHandler {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.OpenFilter {
+    margin: 10px;
+    padding: 10px;
+    width: 80%;
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
+    border-radius: 4px;
+}
