--- a/client/src/routes/People/People.css
+++ b/client/src/routes/People/People.css
@@ -17,9 +17,47 @@
     width: 100%;
 }
 
-.PeopleFilterBox {
+.OpenFilterFilter {
+    flex: 3;
+    margin-right: 10px;
+}
+
+.OpenFilterSort {
+    flex: 1;
+}
+
+.OpenFilterFilter, .OpenFilterSort {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
+    border-radius: 4px;
+    padding: 3px;
+}
+
+.filterBoxDisplay {
+    display: block;
+}
+
+.filterBoxHide {
+    display: none;
+}
+
+.Select {
+    padding: 0 2.5rem 0 1.5rem;
+    background: transparent;
+    border: none;
+    /* font-size: 1.3rem; */
+}
+
+/* .PeopleFilterBox {
     width: 100%;
     margin-bottom: 10px;
+} */
+
+.FilterComponent {
+    width: 80%;
+    margin: auto;
 }
 
 .FilterHandler {
@@ -29,9 +67,8 @@
 }
 
 .OpenFilter {
+    display: flex;
+    justify-content: space-around;
     margin: 10px;
     padding: 10px;
-    width: 80%;
-    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
-    border-radius: 4px;
 }
