--- a/client/src/routes/Profile/Profile.css
+++ b/client/src/routes/Profile/Profile.css
@@ -13,13 +13,13 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 10px;
-    border:1px solid black;
+    /* border:1px solid black; */
 }
   
 .ProfileBox {
     display: flex;
     justify-content: center;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 50em;
 }
 
@@ -31,6 +31,24 @@
 }
 
 .tags {
-    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 10px;
+    height: 100px;;
+    max-width: 250px;
+    flex-wrap: wrap;
+    overflow-y: auto;
+}
+
+.Suggestion {
+    display: flex;
+    flex-direction: row;
+    
+}
+
+.YourTags {
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
+    border-radius: 4px;
+    padding: 3px;
 }
